tests/ui/nll/issue-55394.stderr
error: lifetime may not live long enough
  --> $DIR/issue-55394.rs:9:9
   |
LL |     fn new(bar: &mut Bar) -> Self {
   |                 -            ---- return type is Foo<'2>
   |                 |
   |                 let's call the lifetime of this reference `'1`
LL |         Foo { bar }
   |         ^^^^^^^^^^^ associated function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`

error: aborting due to 1 previous error

